--- a/Poissons.tex
+++ b/Poissons.tex
@@ -29,6 +29,7 @@
 \newtheorem{thm}{Theorem}[section]
 \newtheorem{corollary}[thm]{Corollary}
 \newtheorem{lemma}[thm]{Lemma}
+\newtheorem{construction}[thm]{Construction}
 \newtheorem{proposition}[thm]{Proposition}
 \newtheorem{Questions}[thm]{Questions}
 \theoremstyle{definition}
@@ -82,9 +83,10 @@
 \newcommand{\FL}{F\!L}
 \newcommand{\mc}{\mu}
 
-\newcommand{\EC}{C}
-\newcommand{\OP}{\Delta}
-\newcommand{\BT}{BT}
+%Important sets 
+\newcommand{\EC}{\mathcal{E}} %essential complimentary partitions
+\newcommand{\OP}{\mathcal{O}} %ordered partitions
+\newcommand{\BT}{\mathcal{B}} %bipartite trees
 
 
 \newcommand{\0}{\color{blue}{\mathsf{0}}}
@@ -92,7 +94,10 @@
 %OEIS
 \newcommand{\OEIS}[1]{{\rm \href{http://oeis.org/#1}{\texttt{#1}}}}
 
+%Commentaires 
 
+\newcommand{\Guillaume}[1]{\textcolor{magenta}{\underline{Guillaume}: #1}}
+\newcommand{\Kurt}[1]{\textcolor{blue}{\underline{Kurt}: #1}}
 
 \DeclareMathOperator{\Ima}{Im} %Image d'une fonction
 
@@ -175,14 +180,14 @@
 \keywords{Polytopes [...]}
 
 
-\thanks{G. L.-A. was supported by the European Union's Horizon 2020 research and innovation program under the Marie Sklodowska-Curie grant agreement No 754362 \inlinegraphics{EU.png}, by the Natural Sciences and Engineering Research Council of Canada (NSERC) and by the ANR-20-CE40-0016 Higher Algebra, Geometry and Topology.}
+%\thanks{G. L.-A. was supported by the European Union's Horizon 2020 research and innovation program under the Marie Sklodowska-Curie grant agreement No 754362 \inlinegraphics{EU.png}, by the Natural Sciences and Engineering Research Council of Canada (NSERC) and by the ANR-20-CE40-0016 Higher Algebra, Geometry and Topology.}
 
 %========================================
 \begin{document}
 %========================================
 
 \begin{abstract}
-The purpose of this note is to provide a new combinatorial description 
+The purpose of this note is to provide a new combinatorial description of a cellular approximation of the diagonal of the permutahedra. 
 \end{abstract}
 
 
@@ -190,18 +195,20 @@ The purpose of this note is to provide a new combinatorial description
 
 \section{Introduction}
 
-TBC
+This formula has many possible applications in algebraic topology: 1) iterated cobar construction 2) twisted tensor products 3) Fulton--Sturmfels formula for Losev--Manin spaces (compute explicitly the ring struture on the operational Chow ring -over $\Z$?)
 
 %\subsection{Conventions}
 %We use the notations of \cite{LodayVallette12} for operads.
 
-\section{Poissons}
+\Guillaume{Please make a new line for each sentence as to facilitate comparison between versions in GitHub}
+
+\section{Preliminaries}
+
+\subsection{Original description of the diagonal}
 
 Let us recall the combinatorial formula for the cellular approximation of the diagonal of the permutahedra from \cite{LA21}.
-
 Let $n\geq 1$, and let us write \[ D(n) \coloneqq \{(I,J) \ | \ I,J\subset\{1,\ldots,n\}, |I|=|J|, I\cap J=\emptyset, \min(I\cup J)\in I \}. \] 
-
-We have
+For any pair of ordered partitions of $[n]$, we have
 \begin{eqnarray*}
     (\sigma_1,\sigma_2)\in \Ima\triangle_{(P,\vec v)} 
     & \iff & \forall (I,J) \in D(n), \exists l , 
@@ -214,7 +221,203 @@ We have
     \left| \left(\bigcup_{1\leq k \leq l'} \sigma_1^{k} \right)\cap J \right|  \ .
 \end{eqnarray*}
 
-We prove the following equivalent description. 
+\section{Facets of the diagonal}
+
+In this section we establish a bijection between the facets of $\triangle$ and a family of pairs of unordered partitions introduced and enumerated in a series of 3 papers \cite{chen1969computer,chen1971tables,kajitani1982number}. An intermediary bijection to a type of bipartite tree is of particular importance and provides [...].
+In particular, we obtain that the number of facets in $\triangle_n$ is $(n+1)^{n-2}$ (\OEIS{A007334}), and more precisely that the pairs of dimension $(k,n-k)$ are counted by the formula $\binom{n}{k+1}(k+1)^{n-k-1}(n-k)^{k-1}$.
+
+\subsection{Essential complementary partitions and bipartite trees}
+Let us recall some basic definitions and results from the series of papers \cite{chen1969computer,chen1971tables,kajitani1982number}.
+
+\begin{definition}
+We say $P_I = \cup_{i\in I} P_i$ is a \emph{partition} of $[n]:=\{1,\ldots,n\}$ if
+\begin{itemize}
+    \item $ \cup_{i\in I} P_i = [n]$
+    \item $P_i \cap P_j = \emptyset$ for $i \neq j$
+\end{itemize}
+A set of \emph{distinct representatives} of a partition is a set $R\subset [n]$ such that $\forall i \in I,|P_i \cap R| = 1$.
+\end{definition}
+
+
+
+\begin{definition}
+A pair of partitions $P=(P_L,P_R):=(\cup_{l\in L} P_l , \cup_{r\in R} P_r)$ is
+\begin{itemize}
+    \item \emph{complimentary} if there exists $I\subset [n]$ and $p \in I$ such that $I$ and $(V\setminus I) \cup \{p\}$ are distinct representatives of $P_L$ and $P_R$, respectively.
+    \item \emph{essential} if there does not exists proper subsets $K \subset [n], L'\subset L$ and $R'\subset R$ such that $P':=(P_{L'},P_{R'})$ is a complimentary partition of $K$.
+\end{itemize}
+\end{definition}
+
+We shall denote the set of all essential complimentary pairs of partitions by $\EC$.
+Let us emphasize that the pairs of partitions of $\EC$ are \emph{unordered}.
+
+\begin{example}
+n=2, n=3 [TODO]
+\end{example}
+
+A \emph{tree} is a simply connected graph with no cycles. 
+A \emph{bipartite graph} is a graph whose vertices are partitioned into two sets such that vertices in one set are only adjacent to vertices in the other, we say it is \emph{ordered} if one of the sets is considered smaller than the other and we denote the partition $(V_L,V_R)$. 
+We say a graph with $n$ edges is \emph{edge labelled} if there exists a bijection between the edges and $\{1,\dots,n\}$.
+Let $\BT$ denote the set of edge labelled ordered bipartite trees.
+
+\begin{proposition} [{\cite[Theorem 3]{kajitani1982number}}] 
+\label{EC Graph Bijection}
+Essential complementary partitions and labelled bipartite trees are in bijection through $G:\EC \to \BT$ and $P:\BT \to \EC$, where
+\begin{itemize}
+    \item $G$ takes a pair $(P_L,P_R)$ and constructs partitioned vertices $(V_L,V_R)$. For each $i \in  \{1,\dots,n\}$ an edge is added between $v_l$ and $v_r$ if $i\in P_l$ and $i \in P_r$. 
+    \item $P$ takes a tree from $\BT$ and labels the vertices $(V_L,V_R)$ by the edges which are adjacent to them. The labels of the vertices can then be interpreted as a pair of partitions.
+\end{itemize}
+\end{proposition}
+\Guillaume{Consider changing notation for functions vs sets}
+
+\begin{figure}
+\begin{center}
+\includegraphics{Images/bijections_example.png}
+\end{center}
+\caption{The bijection between ordered partitions and bipartite trees.}
+\end{figure}
+
+\begin{corollary}[\cite{kajitani1982number}]
+The number of essential complementary partitions is $|\EC_n| = 2(n+1)^{n-2}$.
+\end{corollary}
+
+\subsection{Bijection with the facets of the diagonal}
+
+We denote by $\OP$ be the set of ordered pairs of partitions of $[n]$ labeling facets of the diagonal $\triangle$.
+
+\begin{thm}
+Facets of the diagonal and essential complimentary partitions are in bijection through the inverse functions $u:\OP \to \EC$ and $o:\EC\to \OP$, where
+\begin{enumerate}
+    \item The function $u$ forgets the order of the ordered partition pair.
+    \item The function $o$ uniquely orders an essential complimentary partition pair via the defining conditions of the diagonal. 
+\end{enumerate}
+\end{thm}
+We shall prove this theorem by establishing the necessary total order, showing that the functions are well defined, and then showing that they are injective.
+
+\begin{lemma} 
+\label{u well defined}
+The function $u:\OP \to \EC$ that forgets the order in a pair of partitions is well defined.
+\end{lemma}
+\begin{proof}
+Let $P \in \OP_n$. Then $G(u(P))$ is a graph with $l+r=n+1$ vertices, and $n$ edges. Furthermore, as no vertices can be isolated it must be the case that this graph is a tree. 
+It is straightforward to verify that $G(u(P))$ must be labeled bipartite tree, but here is how we may explicitly produce the necessary distinct representatives using an algorithm of \cite[Theorem 2]{kajitani1982number}.
+
+Let $G'$ be a copy of $G(u(P))$. 
+While there is a vertex of degree $1$ in $G'$ delete it and add the sole edge of that vertex as a distinct representative of the corresponding partition of that vertex. 
+As $G'$ is a tree this process can continue until there is a single edge connecting two vertices of degree $1$. 
+This edge specifies the element $p$ of the distinct representatives.
+\end{proof}
+
+\begin{construction} 
+\label{Order Lemma}
+For $P=(P_L,P_R) \in \EC$ an essential complementary pair, we construct total orders on $P_L$ and $P_R$ in three steps:
+\begin{enumerate}
+    \item For $l,l' \in L$ there exists a unique minimal set of edges $p_{l,l'}$ of even cardinality connecting $V(P_l)$ and $V(P_{l'})$ in $G(P)$ (similar for $R$). We partition this set of edges as $I\cup J$ where $I$ and $J$ are each pairwise non-adjacent, and $I$ contains the minimal edge.
+    \item Orient each path so that $I$ points left to right, and $J$ points right to left (same orientation for $P_L$ and $P_R$). 
+    \item We say $P_l< P_{l'}$ (or $P_r < P_{r'}$) if the constructed path points from $V(P_l) \to V(P_{l'})$ ($V(P_r) \to V(P_{r'})$.
+\end{enumerate}
+\end{construction}
+
+\begin{proof}
+We first show our binary relation is well defined before verifying that it defines a total order on $G(P)$ and hence $P$ via the bijection of \cref{EC Graph Bijection}.
+
+As $G(P)$ is a bipartite tree, every vertex is connected, and every path connecting two vertices on the same side must be of even length. 
+As $I$ and $J$ are each pairwise non-adjacent, they must partition the path in an alternating fashion i.e. $p=(I_{i_1},J_{j_1},I_{i_2},J_{j_2},..., )$, hence we can orient the path by forcing $I$ to point left and $J$ to point right.
+
+This order is clearly total, reflexive (by convention) and anti-symmetric, what remains to be checked is its transitivity. 
+Let $p_{v,v'}$ denote the unique minimal path between two vertices and for a set $A$ let $A_*:= \min A$, in particular ${I_{v,v'}}_*$ denotes the minimal value of $I$ on this path. 
+Suppose there exists three vertices $a,b,c$ all on the same side (either left or right) such that the following conditions hold.
+\begin{align*}
+    a<b \quad &\iff \quad {I_{a,b}}_* = ({I_{a,b}} \cup J_{a,b})_*\\
+    b<c \quad &\iff \quad{I_{b,c}}_* = ({I_{b,c}} \cup J_{b,c})_*
+\end{align*}
+As $a,b,c$ are all vertices on a tree there must exist a middle vertex $m$ such that all unique minimal paths $p_{a,b},p_{b,c}$ and $p_{a,c}$ use this vertex (in general this vertex could be $b$). There are four possibilities for the joint locations of ${I_{a,b}}_*$ and ${I_{b,c}}_*$ which are illustrated in \cref{fig:transitivity-cases}.
+
+\begin{figure}
+\begin{center}
+\includegraphics{Images/transitivity cases.png}   
+\end{center}
+\caption{Transitivity cases}
+\label{fig:transitivity-cases}
+\end{figure}
+
+\begin{enumerate}
+    \item Here ${I_{b,c}}_* \in J_{a,b}$ and hence ${I_{a,c}}_*={I_{a,b}}_*<{I_{b,c}}_*$.
+    \item Here ${I_{a,c}}_* = ({I_{a,b}} \cup {I_{b,c}})_*$.
+    \item Here we have a contradiction as ${I_{b,c}}_* \in J_{a,b} \implies {I_{a,b}}_*<{I_{b,c}}_*$  and ${I_{a,b}}_* \in J_{b,c} \implies {I_{b,c}}_*<{I_{a,b}}_*$.
+    \item Here ${I_{a,b}}_* \in J_{b,c}$ and hence ${I_{a,c}}_*={I_{b,c}}_*<{I_{a,b}}_*$. 
+\end{enumerate}
+So, for every case except the contradictory $3$rd we have that \begin{align*}
+    {I_{a,c}}_* = ({I_{a,b}} \cup J_{a,b} \cup {I_{b,c}} \cup J_{b,c})_* = ({I_{a,c}} \cup J_{a,c})_* \implies a < c 
+\end{align*}
+\end{proof}
+\Kurt{An alternate proof given by Guillaume is the following, but I think we still might need to to handle the contradiction case in this. (or this fixed by something I'm not seeing?)}
+\Guillaume{Here is my argument, it includes the contradiction case (it does not occur, by definition!)}
+
+\begin{lemma}[Transitivity]
+\end{lemma}
+\begin{proof}
+    Let $p_{ab}$ denote the unique maximal path between two vertices $a$ and $b$ on the left of $G(P)$, that is two blocks of $P_L$. 
+    Let $I_{ab}$ denote the set of left-to-right edges in this path, and let $J_{ab}$ denote its complement. 
+    Then, we have 
+    \begin{equation}
+        \label{eq:order}
+        a < b \iff \min(I_{ab}\cup J_{ab})=\min(I_{ab}) \ . 
+    \end{equation}
+    Suppose now that $a < b$ and $b < c$.
+    Since $p_{ac}= (p_{ab} \cup p_{bc}) \setminus (p_{ab} \cap p_{bc})$, we have $$ I_{ac}=(I_{ab}\cup I_{bc}) \setminus (J_{ab} \cup J_{bc}) \text{ and } J_{ac}=(J_{ab}\cup J_{bc}) \setminus (I_{ab} \cup I_{bc}) \ , $$ and from the condition \cref{eq:order} above it is clear that $\min(I_{ac}\cup J_{ac})=\min(I_{ac})$.
+\end{proof}
+
+This order far from being arbitrary provides the unique way to order an essential complimentary partition pair into an ordered partition pair of $\triangle$, as we shall demonstrate in the next lemma.
+
+\begin{lemma} 
+\label{o well defined}
+The function $o:\EC \to \OP$ that orders an essential complimentary pair is well defined.
+\end{lemma}
+
+\begin{proof}
+Let $P=(P_L,P_R) \in EC$ and consider $o(P)$. We first show that every $I,J \in D(n)$ which correspond to a path between vertices is satisfied. Suppose $I,J$ corresponds to a path between two vertices on the left, i.e.
+\begin{align*}
+    V(P_l) = V_{L_1} \xrightarrow{i_1} V_{R_1}\xrightarrow{j_1} V_{L_2} \xrightarrow{i_2}... \xrightarrow{i_{k}} V_{R_{k-1}} \xrightarrow{j_k} V_{L_k}=V(P_{l'})
+\end{align*}
+By construction we have that $I = \{i_1,...,i_k\},J=\{j_1,...,j_k\} \in D(n)$ (note we are ordering $I$ and $J$ by the path, so it is not necessarily the case that $\min I = i_1$). Furthermore, each sub partition of $P_R$ either contains a single element of $I$ and a single element of $J$, or it contains no elements of $I$ and no elements of $J$. As such for any ordering of the sub-partitions of $P_R$ we have that 
+\begin{align*}
+    \forall m, |\bigcup_{1\leq k \leq m} P_{R,k} \cap I| = |\bigcup_{1\leq k \leq m} P_{R,k} \cap J|
+\end{align*}
+Hence in order for this $D(n)$ condition to be satisfied it must be the case that for some ordering of the sub-partitions of $P_L$ that we have
+\begin{align*}
+    \exists m, |\bigcup_{1\leq k \leq m} P_{L,k} \cap I| > |\bigcup_{1\leq k \leq m} P_{L,k} \cap J|
+\end{align*}
+Every sub-partition of $P_L$ excluding the $l$th and $l'$th either contains no elements of both $I$ and $J$, or it contains a single element of $I$ and a single element of $J$. So the only way for the condition to be satisfied is for $P_l$ to come before $P_{l'}$, which is precisely what is required by the total order.
+\\\\
+If $I,J$ corresponds to a path between two vertices on the right,
+\begin{align*}
+    V(P_r) = V_{R_1} \xrightarrow{j_1} V_{L_1}\xrightarrow{i_1} V_{L_2} \xrightarrow{j_2}... \xrightarrow{j_{k}} V_{L_{k-1}} \xrightarrow{1_k} V_{R_k}=V(P_{r'})
+\end{align*}
+then a similar chain of logic implies we must have an ordering of the sub-partitions of $P_R$ such that
+\begin{align*}
+    \exists m, |\bigcup_{1\leq k \leq m} P_{R,k} \cap I| < |\bigcup_{1\leq k \leq m} P_{R,k} \cap J|
+\end{align*}
+and this can only happen if $P_r$ comes before $P_{r'}$.
+\\\\
+What remains to be shown is that every $I,J \in D(n)$ which does not correspond to a path is satisfied... 
+\\\\
+A likely proof method seems to be assume there exists such an $I,J$ which contradicts the $D(n)$ assumption then show this leads to contradiction....
+\end{proof}
+
+\begin{lemma} \label{o and u are injective}
+Both $u:\OP \to \EC$ and $o:\EC\to \OP$ are injective, with the other function being their inverse.
+\end{lemma}
+\begin{proof}
+The forgetful function $u$ is clearly the inverse to $o$ as forgetting any assigned order will clearly return the original essential complimentary partition pair. The ordering function $o$ is the inverse to $u$ as it returns the sole ordering of the sub-partitions which is compatible with the $D(n)$ conditions.
+\end{proof}
+
+
+
+
+\section{Vertices of the diagonal}
+
+We are now interested in characterizing the pairs of vertices that occur in the diagonal, that is pairs of permutations $(\sigma_1,\sigma_2) \in \triangle$. 
 
 \begin{thm} There exists $(I,J) \in D(n)$ such that $\forall k, |\sigma_1^1\cdots\sigma_1^k \cap I| \leq |\sigma_1^1\cdots\sigma_1^k \cap J|$ and $\forall l, |\sigma_1^1\cdots\sigma_1^l \cap I| \geq |\sigma_1^1\cdots\sigma_1^l \cap J|$ (diagonal condition) if and only if $\exists (I',J')=(\{i_1,\ldots,i_m\},\{j_1,\ldots,j_m\}) \in D(m)$, $m\leq n$, such that \[\sigma_1 \cap (I'\cup J')=j_1 i_1 j_2 i_2 \cdots j_n i_n \] and \[ \sigma_2 \cap (I'\cup J') = i_2 j_1 i_3 j_2 \cdots i_n j_{n-1} i_1 j_n \ , \] where $i_1 = \min (I' \cup J')$ (fish condition). 
 \end{thm}
@@ -263,6 +466,11 @@ E(m)=\{(I,J)\in D(m)| \min(J)<\min(I-\min(I)), |\llbracket 1; k \rrbracket \cap 
 \begin{proof}
 It follows directly from the fish condition: if the fish condition is satisfied, as inversions of $\sigma_1$ are included in inversions of $\sigma_2$, we get $j_{k-1},j_k<i_k$ for any $k>1$.
 \end{proof}
+
+
+\section{Tables}
+
+In this section we present low dimensional computations of the enumeration results obtained above and we connect them to other known combinatorial objects. 
 
 \begin{figure}[h]
 \centerline{
@@ -327,9 +535,7 @@ It follows directly from the fish condition: if the fish condition is satisfied,
 \label{t:dim4-5}
 \end{figure}
 
-The diagonals obey to the formula $\binom{n}{k+1}(k+1)^{n-k-1}(n-k)^{k-1}$.
 
-Their sum is equal to $1,2,8,50,432,4802,65536...$.
 
 \begin{figure}[h]
 \centerline{\begin{tabular}{c|c|rrrrrrr|l}
@@ -347,171 +553,6 @@ $\dim F + \dim G = \dim P$  & \text{Multiplihedra} & 1 & 2 & 8 & 42 & 254 & 1678
 \label{table:numerology}
 \end{figure}
 
-
-
-\section{The Bijection}
-
-In this section we shall establish a bijection between $\OP$ and a family of pairs of unordered partitions introduced and enumerated in a series of 3 papers \cite{chen1969computer} \cite{chen1971tables}, \cite{kajitani1982number}. An intermediary bijection to a type of bipartite tree is of particular importance and provides ... 
-
-\subsection{Essential Complementary Partitions and Bipartite Trees}
-
-We first recall the necessary definitions and results of these papers.
-
-\begin{definition}
-Let $\OP$ be the set of ordered pairs of partitions.
-\end{definition}
-
-\begin{definition}
-We say $P_I = \cup_{i\in I} P_i$ is a \textbf{partition} of $V = \{1,\dots,n\}$ if 
-\begin{itemize}
-    \item $ \cup_{i\in I} P_i = V$
-    \item $P_i \cap P_j = \emptyset$ for $i \neq j$
-\end{itemize}
-A set of \textbf{distinct representatives} of a partition is a set $R\subset V$ such that $\forall i \in I,|P_i \cap R| = 1$.
-
-\end{definition}
-
-
-\begin{definition}
-Let $K = \{1,\dots,n\}$, and let $P:=(P_L,P_R):=(\cup_{l\in L} P_l , \cup_{r\in R} P_r)$ be a pair of partitions of $V$. The pair $P$ is called \textbf{complimentary} if there exists $I\subset K$ and $p \in I$ such that $I$ and $(V\setminus I) \cup \{p\}$ are distinct representatives of $P_L$ and $P_R$ respectively.
-\\\\
-The pair $P$ of complimentary partitions is called \textbf{essential} if there does not exists proper subsets $K' \subset K, L'\subset L$ and $R'\subset R$ such that $P'=(P_{L'},P_{R'})$ is a complimentary partition of $K'$.
-\\\\
-We shall denote the set of all essential complimentary pairs of partitions as $\EC$.
-\end{definition}
-
-\begin{example}
-n=2, n=3 [TODO]
-\end{example}
-
-We note that the pairs of partitions of $\EC$ are unordered, and that the pairs of partitions of $\OP$ are ordered.
-
-\begin{definition}
-A \textbf{tree} is a simply connected graph with no cycles. A \textbf{bipartite graph} is a graph whose vertices are partitioned into two sets such that vertices in one set are only adjacent to vertices in the other, we say it is \textbf{ordered} if one of the sets is considered smaller than the other and we denote the partition $(V_L,V_R)$. We say a graph with $n$ edges is \textbf{edge labelled} if there exists a bijection between the edges and $\{1,\dots,n\}$.
-Let $\BT$ denote the set of edge labelled ordered bipartite trees.
-\end{definition}
-
-\begin{proposition} [Theorem 3 of \cite{kajitani1982number}] \label{EC Graph Bijection}
-The sets $\BT$ and $\EC$ are in bijection through $G:\EC \to \BT$ and $P:\BT \to \EC$, where
-\begin{itemize}
-    \item $G$ takes a pair $(P_L,P_R)$ and constructs partitioned vertices $(V_L,V_R)$. For each $i \in  \{1,\dots,n\}$ an edge is added between $v_l$ and $v_r$ if $i\in P_l$ and $i \in P_r$. 
-    \item $P$ takes a tree from $\BT$ and labels the vertices $(V_L,V_R)$ by the edges which are adjacent to them. The labels of the vertices can then be interpreted as a pair of partitions.
-\end{itemize}
-
-\end{proposition}
-
-\begin{example}
-\phantom{a}\\
-\begin{center}
-\includegraphics{Images/bijections_example.png}
-\end{center}
-\end{example}
-
-\begin{corollary}[\cite{kajitani1982number}]
-$|\EC_n| = 2(n+1)^{n-2}$
-
-\end{corollary}
-
-\subsection{The Bijection}
-
-\begin{thm}
-The sets $\OP$ and $\EC$ are in bijection through $u:\OP \to \EC$ and $o:\EC\to \OP$.
-\begin{itemize}
-    \item The function $u$ forgets the order of the ordered partition pair.
-    \item The function $o$ uniquely orders an essential complimentary partition pair through lemma \ref{Order Lemma}.
-\end{itemize}
-\end{thm}
-We shall prove this theorem by establishing the necessary total order, showing the functions are well defined, and then showing they are injective.
-
-\begin{lemma} \label{u well defined}
-$u:\OP \to \EC$ is well defined.
-\end{lemma}
-\begin{proof}
-Let $P \in \OP_n$. Then $G(u(P))$ is a graph with $l+r=n+1$ vertices, and $n$ edges. Furthermore, as no vertices can be isolated it must be the case that this graph is a tree. It is straightforward to verify that $G(u(P))$ must be an element of $BT$, but here is how we may explicitly produce the necessary distinct representatives using an algorithm of theorem 2 of \cite{kajitani1982number}.
-\\\\
-Let $G'$ be a copy of $G(u(P))$. While there is a vertex of degree $1$ in $G'$ delete it and add the sole edge of that vertex as a distinct representative of the corresponding partition of that vertex. As $G'$ is a tree this process can continue until there is a single edge connecting two vertices of degree $1$. This edge specifies the element $p$ of the distinct representatives.
-\end{proof}
-
-\begin{lemma} \label{Order Lemma}
-Let $P=(P_L,P_R) \in \EC$, there exists total orders on $P_L$ and $P_R$ induced via the bijection $G(P)$
-\begin{itemize}
-    \item For $l,l' \in L$ there exists a unique minimal set of edges $p_{l,l'}$ of even cardinality connecting $V(P_l)$ and $V(P_{l'})$ in $G(P)$ (similar for $R$). We partition this set of edges as $I\cup J$ where $I$ and $J$ are each pairwise non-adjacent, and $I$ contains the minimal edge.
-    \item Orient each path so that $I$ points left to right, and $J$ points right to left (same orientation for $P_L$ and $P_R$). 
-    \item We say $P_l< P_{l'}$ (or $P_r < P_{r'}$) if the constructed path points from $V(P_l) \to V(P_{l'})$ ($V(P_r) \to V(P_{r'})$.
-\end{itemize}
-\end{lemma}
-\begin{proof}
-We first show our binary relation is well defined before verifying that it defines a total order on $G(P)$ and hence $P$ via the bijection of \ref{EC Graph Bijection}.
-\\\\
-As $G(P)$ is a bipartite tree, every vertex is connected, and every path connecting two vertices on the same side must be of even length. As $I$ and $J$ are each pairwise non-adjacent, they must partition the path in an alternating fashion i.e. $p=(I_{i_1},J_{j_1},I_{i_2},J_{j_2},..., )$, hence we can orient the path by forcing $I$ to point left and $J$ to point right.
-\\\\
-This order is clearly total, reflexive (by convention) and anti-symmetric, what remains to be checked is its transitivity. Let $p_{v,v'}$ denote the unique minimal path between two vertices and for a set $A$ let $A_*:= \min A$, in particular ${I_{v,v'}}_*$ denotes the minimal value of $I$ on this path. Suppose there exists three vertices $a,b,c$ all on the same side (either left or right) such that the following conditions hold.
-\begin{align*}
-    a<b \quad &\iff \quad {I_{a,b}}_* = ({I_{a,b}} \cup J_{a,b})_*\\
-    b<c \quad &\iff \quad{I_{b,c}}_* = ({I_{b,c}} \cup J_{b,c})_*
-\end{align*}
-As $a,b,c$ are all vertices on a tree there must exist a middle vertex $m$ such that all unique minimal paths $p_{a,b},p_{b,c}$ and $p_{a,c}$ use this vertex (in general this vertex could be $b$). There are four possibilities for the joint locations of ${I_{a,b}}_*$ and ${I_{b,c}}_*$ which are illustrated in the figure below.
-\begin{center}
-\includegraphics{Images/transitivity cases.png}   
-\end{center}
-
-
-\begin{enumerate}
-    \item Here ${I_{b,c}}_* \in J_{a,b}$ and hence ${I_{a,c}}_*={I_{a,b}}_*<{I_{b,c}}_*$.
-    \item Here ${I_{a,c}}_* = ({I_{a,b}} \cup {I_{b,c}})_*$.
-    \item Here we have a contradiction as ${I_{b,c}}_* \in J_{a,b} \implies {I_{a,b}}_*<{I_{b,c}}_*$  and ${I_{a,b}}_* \in J_{b,c} \implies {I_{b,c}}_*<{I_{a,b}}_*$.
-    \item Here ${I_{a,b}}_* \in J_{b,c}$ and hence ${I_{a,c}}_*={I_{b,c}}_*<{I_{a,b}}_*$. 
-\end{enumerate}
-So, for every case except the contradictory $3$rd we have that \begin{align*}
-    {I_{a,c}}_* = ({I_{a,b}} \cup J_{a,b} \cup {I_{b,c}} \cup J_{b,c})_* = ({I_{a,c}} \cup J_{a,c})_* \implies a < c 
-\end{align*}
-\end{proof}
-An alternate proof given by Guillaume is the following, but I think we still might need to to handle the contradiction case in this. (or this fixed by something I'm not seeing?)
-\begin{center}
-\includegraphics{Images/alternate_transitivity.png}
-\end{center}
-
-
-This order far from being arbitrary provides the unique way to order an essential complimentary partition pair into an ordered partition pair, as we shall demonstrate in the next lemma.
-\begin{lemma} \label{o well defined}
-$o:\EC \to \OP$ is well defined.
-\end{lemma}
-\begin{proof}
-Let $P=(P_L,P_R) \in EC$ and consider $o(P)$. We first show that every $I,J \in D(n)$ which correspond to a path between vertices is satisfied. Suppose $I,J$ corresponds to a path between two vertices on the left, i.e.
-\begin{align*}
-    V(P_l) = V_{L_1} \xrightarrow{i_1} V_{R_1}\xrightarrow{j_1} V_{L_2} \xrightarrow{i_2}... \xrightarrow{i_{k}} V_{R_{k-1}} \xrightarrow{j_k} V_{L_k}=V(P_{l'})
-\end{align*}
-By construction we have that $I = \{i_1,...,i_k\},J=\{j_1,...,j_k\} \in D(n)$ (note we are ordering $I$ and $J$ by the path, so it is not necessarily the case that $\min I = i_1$). Furthermore, each sub partition of $P_R$ either contains a single element of $I$ and a single element of $J$, or it contains no elements of $I$ and no elements of $J$. As such for any ordering of the sub-partitions of $P_R$ we have that 
-\begin{align*}
-    \forall m, |\bigcup_{1\leq k \leq m} P_{R,k} \cap I| = |\bigcup_{1\leq k \leq m} P_{R,k} \cap J|
-\end{align*}
-Hence in order for this $D(n)$ condition to be satisfied it must be the case that for some ordering of the sub-partitions of $P_L$ that we have
-\begin{align*}
-    \exists m, |\bigcup_{1\leq k \leq m} P_{L,k} \cap I| > |\bigcup_{1\leq k \leq m} P_{L,k} \cap J|
-\end{align*}
-Every sub-partition of $P_L$ excluding the $l$th and $l'$th either contains no elements of both $I$ and $J$, or it contains a single element of $I$ and a single element of $J$. So the only way for the condition to be satisfied is for $P_l$ to come before $P_{l'}$, which is precisely what is required by the total order.
-\\\\
-If $I,J$ corresponds to a path between two vertices on the right,
-\begin{align*}
-    V(P_r) = V_{R_1} \xrightarrow{j_1} V_{L_1}\xrightarrow{i_1} V_{L_2} \xrightarrow{j_2}... \xrightarrow{j_{k}} V_{L_{k-1}} \xrightarrow{1_k} V_{R_k}=V(P_{r'})
-\end{align*}
-then a similar chain of logic implies we must have an ordering of the sub-partitions of $P_R$ such that
-\begin{align*}
-    \exists m, |\bigcup_{1\leq k \leq m} P_{R,k} \cap I| < |\bigcup_{1\leq k \leq m} P_{R,k} \cap J|
-\end{align*}
-and this can only happen if $P_r$ comes before $P_{r'}$.
-\\\\
-What remains to be shown is that every $I,J \in D(n)$ which does not correspond to a path is satisfied... 
-\\\\
-A likely proof method seems to be assume there exists such an $I,J$ which contradicts the $D(n)$ assumption then show this leads to contradiction....
-\end{proof}
-
-\begin{lemma} \label{o and u are injective}
-Both $u:\OP \to \EC$ and $o:\EC\to \OP$ are injective, with the other function being their inverse.
-\end{lemma}
-\begin{proof}
-The forgetful function $u$ is clearly the inverse to $o$ as forgetting any assigned order will clearly return the original essential complimentary partition pair. The ordering function $o$ is the inverse to $u$ as it returns the sole ordering of the sub-partitions which is compatible with the $D(n)$ conditions.
-\end{proof}
 
 \emph{Acknowledgements.}    
 
